# system-design-assessment

./: README.md
video-app/: README.md  package-lock.json  package.json
video-app/app/: globals.css  logo.tsx  page.tsx  placeholder-data.ts  video-tile.tsx
video-service/: README.md  pyproject.toml
video-service/src/video_service/: database.py  main.py  models.py
