[project]
name = "video-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Smith",email = "alexsmith1@me.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)"
]

[tool.poetry]
packages = [{include = "video_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
